--- a/Dockerfile.client
+++ b/Dockerfile.client
@@ -2,4 +2,11 @@
 # It also proxies /api requests to api:5000
 
 # Build step #1: build the React front end
-FROM node:16-alpine
+FROM node:16-alpine as build-step
+WORKDIR /app
+ENV PATH /app/node_modules/.bin:$PATH
+COPY package.json yarn.lock ./
+COPY ./src ./src
+COPY ./public ./public
+RUN yarn install
+RUN yar
