--- a/Dockerfile.client
+++ b/Dockerfile.client
@@ -9,4 +9,9 @@ COPY package.json yarn.lock ./
 COPY ./src ./src
 COPY ./public ./public
 RUN yarn install
-RUN yar
+RUN yarn build
+
+# Build step #2: build an nginx container
+FROM nginx:stable-alpine
+COPY --from=build-step /app/build /usr/share/nginx/html
+COPY deployment/nginx.default.conf /etc/nginx/co
