--- a/Dockerfile.client
+++ b/Dockerfile.client
@@ -14,4 +14,4 @@ RUN yarn build
 # Build step #2: build an nginx container
 FROM nginx:stable-alpine
 COPY --from=build-step /app/build /usr/share/nginx/html
-COPY deployment/nginx.default.conf /etc/nginx/co
+COPY deployment/nginx.default.conf /etc/nginx/conf.d/default.conf
