--- a/public/manifest.json
+++ b/public/manifest.json
@@ -21,4 +21,5 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#f
+  "background_color": "#ffffff"
+}
